--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Super Geile Seite</title>
   </head>
   <body>
-
+    <h1>Wetter und Stuff</h1>
   </body>
 </html>
